--- a/basic-js-master/package.json
+++ b/basic-js-master/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha test.js"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -24,7 +24,7 @@
   },
   "homepage": "https://github.com/AlreadyBored/basic-js#readme",
   "devDependencies": {
-    "chai": "^4.3.0",
+    "chai": "^4.2.0",
     "mocha": "^7.0.1",
     "sinon": "^8.1.1"
   }
